
- Implemented FR #52555 (Ability to get HTTP response code). (Paul Dragoonis)
- Implemented FR #51295 (SQLite3::busyTimeout not existing). (Mark)
- Implemented FR #48632 (OpenSSL AES support). (yonas dot y
   at gmail dot com, Pierre)
- Implemented FR #42060 (Add paged Results support). (ando@OpenLDAP.org,
  iarenuno@eteo.mondragon.edu, jeanseb@au-fil-du.net, remy.saissy@gmail.com)

- Fixed PDO objects binary incompatibility. (Dmitry)

- Fixed bug #52211 (iconv() returns part of string on error). (Felipe)

	
?? ??? 20??, PHP 5.3.3
- Upgraded bundled PCRE to version 8.01. (Ilia)

- Added stream filter support to mcrypt extension (ported from 
  mcrypt_filter). (Stas)
- Added full_special_chars filter to ext/filter (Rasmus)

- Fixed a NULL pointer dereference when processing invalid XML-RPC
  requests (Fixes CVE-2010-0397, bug #51288). (Raphael Geissert)

- Fixed bug #52614 (Memory leak when writing on uninitialized variable returned
  from method call). (Dmitry)
- Fixed bug #51338 (URL-Rewriter is still enabled if use_only_cookies is
  on). (Ilia, j dot jeising at gmail dot com)
- Fixed bug #51269 (zlib.output_compression Overwrites Vary Header). (Adam)
- Fixed bug #51257 (CURL_VERSION_LARGEFILE incorrectly used after libcurl
  version 7.10.1). (aron dot ujvari at microsec dot hu)
- Fixed bug #51242 (Empty mysql.default_port does not default to 3306 anymore,
  but 0). (Adam)
- Fixed bug #51237 (milter SAPI crash on startup). (igmar at palsenberg dot com)
- Fixed bug #51213 (pdo_mssql is trimming value of the money column). (Ilia, 
  alexr at oplot dot com)
- Fixed bug #51190 (ftp_put() returns false when transfer was successful).  
  (Ilia)
- Fixed bug #51176 (Static calling in non-static method behaves like $this->).
  (Felipe)
- Fixed bug #51171 (curl_setopt() doesn't output any errors or warnings when    
  an invalid option is provided). (Ilia)
- Fixed bug #51096 ('last day' and 'first day' are handled incorrectly when
  parsing date strings). (Derick)